plugins {
    id 'java-library'
    id "maven-publish"
}

group 'dev.skidfuscator'
version '1.0.1-SNAPSHOT'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api 'org.jgrapht:jgrapht-core:1.5.2'
    api 'org.jgrapht:jgrapht-ext:1.5.2'
    api 'org.jgrapht:jgrapht-io:1.5.2'
    api 'org.ow2.asm:asm:9.5'
    api 'org.ow2.asm:asm-tree:9.5'
    api 'org.ow2.asm:asm-commons:9.5'
    api 'org.ow2.asm:asm-analysis:9.5'
    api 'org.jetbrains:annotations:24.0.0'

    // Jabel
    //compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:0.4.2'
    //annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.4.2'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}


java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'dev.skidfuscator'
            artifactId = 'ir'
            version = this.version

            from components.java
        }
    }
}

test {
    useJUnitPlatform()
}